0.9.0 (2014-MM-DD)
==================

Backwards Incompatibilities
---------------------------

Bug Handling
------------

Features
--------

* Select unit type and aggregation methods for stats graph
* Added option (immediate_start) to start process immediately in ProcessInput.
 
0.8.1 (2014-MM-DD)
==================

Bug Handling
------------

* Fix leaky file descriptor bug on http_output.go.

* Only stamp PipelinePack diagnostics in cases when a pack actually matches a
  message matcher, instead of for every matcher every time (#1167).

* StatsdInput allows to specify (via max_msg_size option) size of message read
  from UDP (#1165).

* AMQPOutput now recycles packs even when a publish error causes the output to
  exit / restart (#1178).

0.8.0 (2014-10-29)
==================

Backwards Incompatibilities
---------------------------

* Audited the use of Logger and Type headers on internal message (#1024). These
  changes may break some existing message matchers with regards to
  plugin/sandbox termination messages.

* Sandbox decoder linux_cpustats has been renamed to linux_loadavg and the
  corresponding filter cpustats was renamed to loadavg (#1094).

* ESLogstashv0 encoder will now set the @type field to match the ES record
  type specified in the `type_name` setting. This is Logstash behaviour in
  V0. You can revert back to the old method with `use_message_type = true`

Bug Handling
------------

* linux_diskstats.lua will now parse a line with no leading space (#1141).

* Protect globals.Stopping with a RWMutex.

* Added support for `fields` config setting to ESLogstashV0Encoder; it was
  already documented, but hadn't been implemented (#1096).

* Fixed deadlock race condition in AMQPOutput shutdown sequence (#824).

Features
--------

* Added Kafka Input/Output plugins (#1148).

* Optimized prefix/suffix testing in the message matcher (#1040).

* LogstreamerInput now supports seekjournal file hashing for files that are